// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`options.autoDispatch: false does not automatically dispatch callback return values: 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/second",
    "search": "",
    "state": Object {},
    "url": "/second",
  },
]
`;

exports[`options.autoDispatch: false does not automatically dispatch callback return values: 1 - history_index 1`] = `1`;

exports[`options.autoDispatch: false does not automatically dispatch callback return values: 1 - response 1`] = `"foo"`;

exports[`options.autoDispatch: false does not automatically dispatch callback return values: 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`options.autoDispatch: false does not automatically dispatch callback return values: 1 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`options.autoDispatch: false does not automatically dispatch callback return values: 1 - routes - SECOND - thunk 1`] = `1`;

exports[`options.autoDispatch: false does not automatically dispatch callback return values: 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/second",
        "search": "",
        "state": Object {},
        "url": "/second",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "kind": "push",
    "length": 2,
    "params": Object {},
    "pathname": "/second",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SECOND",
    "universal": false,
    "url": "/second",
  },
  "title": "SECOND",
}
`;

exports[`options.autoDispatch: false does not automatically dispatch callback return values: 1 - title 1`] = `"SECOND"`;

exports[`route.autoDispatch: false does not automatically dispatch callback return values: 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/second",
    "search": "",
    "state": Object {},
    "url": "/second",
  },
]
`;

exports[`route.autoDispatch: false does not automatically dispatch callback return values: 1 - history_index 1`] = `1`;

exports[`route.autoDispatch: false does not automatically dispatch callback return values: 1 - response 1`] = `"foo"`;

exports[`route.autoDispatch: false does not automatically dispatch callback return values: 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`route.autoDispatch: false does not automatically dispatch callback return values: 1 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`route.autoDispatch: false does not automatically dispatch callback return values: 1 - routes - SECOND - thunk 1`] = `1`;

exports[`route.autoDispatch: false does not automatically dispatch callback return values: 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/second",
        "search": "",
        "state": Object {},
        "url": "/second",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "kind": "push",
    "length": 2,
    "params": Object {},
    "pathname": "/second",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SECOND",
    "universal": false,
    "url": "/second",
  },
  "title": "SECOND",
}
`;

exports[`route.autoDispatch: false does not automatically dispatch callback return values: 1 - title 1`] = `"SECOND"`;
